# peoplecoin

./: .drone.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  steps.txt
cmake/: FindLibunbound.cmake  MoneroConfig.cmake.in  functions.cmake
contrib/: CMakeLists.txt
contrib/epee/include/net/: enums.h  http_client.h  net_ssl.h
contrib/epee/include/serialization/: keyvalue_serialization.h
contrib/epee/include/storages/: portable_storage_base.h  portable_storage_from_bin.h  portable_storage_to_bin.h
contrib/epee/src/: CMakeLists.txt
contrib/gitian/: dockrun.sh  gitian-android.yml  gitian-build.py  gitian-freebsd.yml  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.h
src/blockchain_db/lmdb/: db_lmdb.cpp
src/blockchain_utilities/: CMakeLists.txt  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp
src/blocks/: CMakeLists.txt
src/checkpoints/: CMakeLists.txt  checkpoints.cpp
src/common/: CMakeLists.txt  dns_utils.cpp  stack_trace.cpp  updates.cpp  util.cpp
src/crypto/: CMakeLists.txt  hash-ops.h  random.c  slow-hash.c  variant4_random_math.h
src/crypto/wallet/: CMakeLists.txt
src/cryptonote_basic/: CMakeLists.txt  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  difficulty.h  miner.cpp  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_pool.h
src/cryptonote_protocol/: CMakeLists.txt  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  levin_notify.cpp
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_server.cpp  executor.cpp  main.cpp  rpc_command_executor.cpp
src/daemonizer/: CMakeLists.txt  posix_fork.cpp
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  dns_checks.cpp
src/device/: CMakeLists.txt  device_ledger.cpp
src/gen_multisig/: CMakeLists.txt  gen_multisig.cpp
src/gen_ssl_cert/: CMakeLists.txt  gen_ssl_cert.cpp
src/hardforks/: CMakeLists.txt  hardforks.cpp  hardforks.h
src/lmdb/: CMakeLists.txt
src/mnemonics/: CMakeLists.txt
src/multisig/: CMakeLists.txt
src/net/: CMakeLists.txt
src/p2p/: CMakeLists.txt  net_node.h  net_node.inl
src/ringct/: CMakeLists.txt  bulletproofs_plus.cc  rctSigs.cpp  rctTypes.h
src/rpc/: CMakeLists.txt  core_rpc_server.cpp  core_rpc_server_commands_defs.h  daemon_handler.cpp
src/serialization/: CMakeLists.txt  json_object.cpp  json_object.h
src/simplewallet/: CMakeLists.txt  simplewallet.cpp  simplewallet.h
src/wallet/: CMakeLists.txt  message_store.cpp  wallet2.cpp  wallet2.h  wallet_args.cpp  wallet_rpc_server.cpp  wallet_rpc_server.h  wallet_rpc_server_commands_defs.h
src/wallet/api/: CMakeLists.txt  coins.cpp  coins_info.cpp  coins_info.h  pending_transaction.cpp  pending_transaction.h  wallet.cpp  wallet.h  wallet2_api.h  wallet_manager.cpp  wallet_manager.h
tests/: CMakeLists.txt  README.md
tests/core_proxy/: core_proxy.h
tests/core_tests/: CMakeLists.txt  bulletproofs.cpp  bulletproofs.h  chaingen_main.cpp  multisig.cpp  rct.cpp  rct2.cpp
tests/performance_tests/: CMakeLists.txt  main.cpp
tests/trezor/: CMakeLists.txt  trezor_tests.cpp
tests/unit_tests/: CMakeLists.txt  bulletproofs.cpp  levin.cpp  node_server.cpp
translations/: CMakeLists.txt
utils/conf/: wow.conf
utils/systemd/: wownerod.service
